solution to assignment 5

--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,7 @@
                             "src/favicon.ico",
                             "src/assets"
                         ],
-                        "styles": [
-                            "./node_modules/bootstrap/dist/css/bootstrap.min.css"
-                        ],
+                        "styles": [],
                         "scripts": []
                     },
                     "configurations": {
